k8s/media-services/pyload/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pyload
  namespace: media-services
  annotations:
    gethomepage.dev/href: "https://pyload.clusterlab.cc"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Free and Open Source download manager"
    gethomepage.dev/group: Download Clients
    gethomepage.dev/icon: https://icons.clusterlab.cc/pyload
    gethomepage.dev/name: Pyload
    gethomepage.dev/pod-selector: "app=pyload"

    gethomepage.dev/widget.type: "pyload"
    gethomepage.dev/widget.url: "http://pyload"
    gethomepage.dev/widget.username: "homepage"
    gethomepage.dev/widget.password: "95782641"

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pyload.clusterlab.cc`)
      kind: Rule
      services:
        - name: pyload
          port: http
    - match: Host(`injest.pyload.clusterlab.cc`)
      kind: Rule
      services:
        - name: pyload
          port: clicknload
  tls:
    secretName: pyload-clusterlab-cc-tls
